--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -1,4 +1,18 @@
-<div class="row">
+<div class="text-center">
+  <h2>{{name}}</h2>
+  <p>{{description}}</p>
+  <p>Added by {{user.name}} on {{format_date date_created}}</p>
+  <p>
+    {{!-- <span for="img" aria-label="money">💲</span> --}}
+    {{!-- <span class="dollar-amount">{{format_amount needed_funding}}</span>
+    needed --}}
+  </p>
+  <p>
+    <button class="btn btn-primary">Review this book!</button>
+  </p>
+</div>
+
+{{!-- <div class="row">
   <div class="col-md-6">
     <h2>Bookpage</h2>
 
@@ -60,4 +74,4 @@
   </div>
 
 
-<script src="./js/Bookpage.js"></script>
+<script src="./js/Bookpage.js"></script> --}}
