--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,20 +6,20 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Add a new book for review:</h3>
 
-    <form class="form new-project-form">
+    <form class="form new-book-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="book-name">book name:</label>
+        <input class="form-input" type="text" id="book-name" name="book-name" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
+        <label for="book-funding">needed funding ($):</label>
+        <input class="form-input" type="number" id="book-funding" name="book-funding" />
       </div>
       <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+        <label for="book-desc">description:</label>
+        <textarea class="form-input" id="book-desc" name="book-desc"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -27,17 +27,17 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if books.length}}
   <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+    <h3>Current book-desc:</h3>
 
-    {{#each projects as |project|}}
+    {{#each books as |book|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a href="/book/{{book.id}}">{{book.name}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{{book.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
