home page displays but some info is missing

--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -1,77 +1,14 @@
 <div class="text-center">
   <h2>{{name}}</h2>
+  <p>{{{get_emoji}}}</p>
   <p>{{description}}</p>
-  <p>Added by {{user.name}} on {{format_date date_created}}</p>
+  <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
-    {{!-- <span for="img" aria-label="money">💲</span> --}}
-    {{!-- <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed --}}
+    <span for="img" aria-label="money">💲</span>
+    <span class="dollar-amount">{{format_amount needed_funding}}</span>
+    needed
   </p>
   <p>
-    <button class="btn btn-primary">Review this book!</button>
+    <button class="btn btn-primary">Fund this Project!</button>
   </p>
 </div>
-
-{{!-- <div class="row">
-  <div class="col-md-6">
-    <h2>Bookpage</h2>
-
-    <form class="form Bookpage">
-      <div class="form-group">
-        <label for="Categories-Bookpage">categories:</label>
-        <input class="form-input" type="text" id="categories-Bookpage" />
-      </div>
-      <div class="form-group">
-        <label for="Title-Bookpage">Title:</label>
-        <input class="form-input" type="Title" id="Title-Bookpage" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Bookpage</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Review</h2>
-
-    <form class="form Review">
-      <div class="form-group">
-        <label for="Title-Review">Title:</label>
-        <input class="form-input" type="text" id="Title-Review" />
-      </div>
-      <div class="form-group">
-        <label for="Book-Review">Book:</label>
-        <input class="form-input" type="text" id="Book-Review" />
-      </div>
-      <div class="form-group">
-        <label for="Insert-Review">Insert:</label>
-        <input class="form-input" type="Insert" id="Insert-Review" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="Insert">Review</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Rate</h2>
-
-    <form class="form Rate">
-      <div class="form-group">
-        <label for="Stars-Rate">Stars:</label>
-        <input class="form-input" type="text" id="Stars-Rate" />
-      </div>
-      <div class="form-group">
-        <label for="Stars-Rate">Book:</label>
-        <input class="form-input" type="text" id="Stars-Rate" />
-      </div>
-      <div class="form-group">
-        <label for="Insert-Rate">Insert:</label>
-        <input class="form-input" type="Insert" id="Insert-Rate" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="Insert">Rate</button>
-      </div>
-    </form>
-  </div>
-
-
-<script src="./js/Bookpage.js"></script> --}}
