--- a/views/review.handlebars
+++ b/views/review.handlebars
@@ -1,8 +1,14 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{description}}</p>
-  <p>Added by {{user.name}} on {{format_date date_created}}</p>
+  <h2>{{book.name}}</h2>
+  <p>{{book.author}}</p>
+  <p></p>
+  <h4>Reviews: </h4>
+  <p>
+    {{#each book.review as |review| }}
 
+
+    {{/each}}
+  </p>  
   <p>
     <button class="btn btn-primary" id="review-button">Add a review!</button>
   </p>
